Changed the app ui

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,11 +1,16 @@
 // Colors
-$btn-blue: #0786FC;
-$btn-grey: #4D5765;
-$primary-blue: #009DDB;
-$light: #F9FDFF;
-$primary-red: #CB1B26;
-$blue-green: #3A87A4;
+$btn-blue: #0786fc;
+$btn-grey: #4d5765;
+$primary-blue: #009ddb;
+$light: #f9fdff;
+$primary-red: #cb1b26;
+$blue-green: #3a87a4;
+$nav-blue: #222e55;
+$light-grey: #171f39;
+$side-panel: #171f39;
+$border-dark: #0c101d;
+$border-light: #4d5765;
+$border-blue: #22668a;
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700');
-$font-main: 'Roboto Mono',
-monospace;
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700");
+$font-main: "Roboto Mono", monospace;
