--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,14 @@
-@import './reset';
-@import './variables';
-@import './components/LandingPage';
-@import './components/PropertyView';
-@import './components/PropertySearch';
-@import './components/PropertyWizard';
-@import './components/WorkOrders';
-@import './components/Transactions';
-@import './components/Pagination';
-@import './components/Payment';
-@import './components/EditProperty';
-@import './components/Button';
-@import './components/Updating';
+@import "./reset";
+@import "./variables";
+@import "./components/Navbar";
+@import "./components/LandingPage";
+@import "./components/PropertyView";
+@import "./components/PropertySearch";
+@import "./components/PropertyWizard";
+@import "./components/WorkOrders";
+@import "./components/Transactions";
+@import "./components/Pagination";
+@import "./components/Payment";
+@import "./components/EditProperty";
+@import "./components/Button";
+@import "./components/Updating";
