--- a/src/styles/components/_PropertyView.scss
+++ b/src/styles/components/_PropertyView.scss
@@ -1,5 +1,5 @@
 .component-home {
-  background-color: #344055;
+  background-color: $light-grey;
   height: 100vh;
   position: relative;
   .views {
@@ -17,46 +17,6 @@
       }
     }
   }
-  .nav {
-    display: flex;
-    height: 10.5vh;
-    align-items: center;
-    background-color: $btn-blue;
-    align-items: center;
-    padding: 0 1rem;
-    justify-content: space-between;
-    .link {
-      &:link,
-      &:visited {
-        text-decoration: none;
-        padding-right: 1rem;
-        font-size: 1.25rem;
-        letter-spacing: 2px;
-        color: $light;
-        transition: all 0.5s;
-      }
-      &:hover,
-      &:active {
-        cursor: pointer;
-        color: $btn-blue;
-      }
-    }
-    .navbar-logo {
-      display: flex;
-      align-items: center;
-      h1 {
-        margin: 0;
-      }
-      .link {
-        font-size: inherit;
-        padding-bottom: 0;
-      }
-    }
-    .nav-links {
-      list-style: none;
-      display: flex;
-    }
-  }
   .property-view {
     height: 89vh;
     display: flex;
@@ -64,7 +24,7 @@
     .property-view-left-column {
       width: 30%;
       height: 100%;
-      background-color: #353755;
+      background-color: $side-panel;
       .property-menu {
         height: 100%;
         .property-menu-tabs {
@@ -75,7 +35,8 @@
             width: 50%;
             height: 100%;
             text-align: center;
-            border: 1px solid $btn-grey;
+            border: 3px solid $border-dark;
+            border-right: none;
             &:hover {
               cursor: pointer;
             }
@@ -98,11 +59,12 @@
     .property-list-container {
       width: 70%;
       height: 100%;
-      border-left: 1px solid $btn-grey;
+      border-left: 3px solid $border-dark;
       overflow: auto;
       .property-header {
         height: 12%;
-        border-bottom: 1px solid $btn-grey;
+        border: 3px solid $border-dark;
+        border-left: none;
         padding: 0 1rem;
         display: flex;
         justify-content: space-between;
@@ -135,82 +97,6 @@
           width: 95%;
           margin: 0 auto;
           display: flex;
-          .modal-container {
-            height: 100%;
-            div div:nth-child(1) {
-              left: 1% !important;
-            }
-            .modal-content {
-              display: flex;
-              height: 100%;
-              .modal-property-img {
-                width: 50%;
-                height: 100%;
-                img {
-                  width: 100%;
-                  height: 100%;
-                }
-              }
-              .modal-property-form {
-                width: 50%;
-                background-color: #344055;
-                height: 100%;
-                padding-bottom: 1rem;
-                overflow-y: scroll;
-                .form-header {
-                  background-color: #2e6b8d;
-                  padding: 3% 0;
-                  text-align: center;
-                  h3 {
-                    font-size: 1.75rem;
-                  }
-                }
-                .form-group {
-                  padding: 0 1rem;
-                  .group-header {
-                    width: 100%;
-                    h5 {
-                      font-size: 1.25rem;
-                      margin: 2% 0;
-                    }
-                  }
-                  .input-group {
-                    display: flex;
-                    flex-direction: column;
-                    margin-bottom: 2%;
-                    label {
-                      margin-bottom: 0.25rem;
-                    }
-                    input {
-                      border-radius: 5px;
-                      padding: 5px 3px;
-                    }
-                  }
-                }
-                .form-group:nth-child(1) {
-                  display: flex;
-                  justify-content: space-between;
-                  flex-wrap: wrap;
-                  .input-group {
-                    width: 47%;
-                  }
-                }
-                .form-submit {
-                  margin-top: 1rem;
-                  display: flex;
-                  justify-content: center;
-                  button {
-                    padding: 5px;
-                    width: 25%;
-                    border-radius: 5px;
-                  }
-                  button:first-child {
-                    margin-right: 5%;
-                  }
-                }
-              }
-            }
-          }
           .property-img {
             height: 100%;
             width: 25%;
@@ -219,9 +105,15 @@
               height: 100%;
             }
           }
+          &:last-child {
+            & > div {
+              border-bottom: 3px solid $border-light;
+            }
+          }
           .property-details {
             display: flex;
             width: 75%;
+            border-top: 3px solid $border-light;
             h5 {
               text-align: center;
               font-size: 1.25rem;
@@ -232,8 +124,16 @@
             }
             & > div {
               padding: 0.75rem;
-              border: 1px solid $btn-grey;
+              border-right: 3px solid $border-light;
+              border-left: 3px solid $border-light;
+              border-bottom: none;
             }
+
+            & > div:nth-child(2n + 1) {
+              border-right: none;
+              border-left: none;
+            }
+
             .property-address {
               width: 32%;
             }
@@ -244,7 +144,8 @@
               width: 40%;
             }
             .property-actions {
-              border: 1px solid $btn-grey;
+              border-right: 3px solid $border-light;
+
               width: 8%;
               display: flex;
               flex-direction: column;
@@ -261,6 +162,9 @@
               .action:first-child {
                 margin-bottom: 2rem;
               }
+              // &:last-child {
+              //   border-bottom: 3px solid $border-light;
+              // }
             }
           }
         }
