--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $side-panel: #171f39;
 $border-dark: #0c101d;
 $border-light: #4d5765;
 $border-blue: #22668a;
+$gold: #f58a07;
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700");
 $font-main: "Roboto Mono", monospace;
