--- a/src/styles/components/_Button.scss
+++ b/src/styles/components/_Button.scss
@@ -1,13 +1,17 @@
+button:focus {
+  outline: 0;
+}
+
 .btn {
-    width: 6rem;
-    height: 2rem;
-    border-radius: 2px;
-    border: none;
-    position: relative;
-    animation: all 1s;
-    &:hover,
-    &:active {
-        cursor: pointer;
-        top: 1px;
-    }
+  width: 6rem;
+  height: 2rem;
+  border-radius: 2px;
+  border: none;
+  position: relative;
+  animation: all 1s;
+  &:hover,
+  &:active {
+    cursor: pointer;
+    top: 1px;
+  }
 }
