--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -891,7 +891,11 @@ template {
     margin: 0 auto; }
   .component-workOrders .control-panel {
     width: 25%;
-    min-height: 89vh; }
+    min-height: 89vh;
+    display: flex;
+    flex-direction: column; }
+    .component-workOrders .control-panel .hidden {
+      display: none; }
     .component-workOrders .control-panel .control-panel-header {
       display: flex;
       height: 12%;
@@ -911,12 +915,61 @@ template {
         top: 0.47vh;
         margin-left: 0.5rem; }
     .component-workOrders .control-panel .controls {
+      height: 38%;
       padding: 1rem; }
       .component-workOrders .control-panel .controls .controls-link {
         margin-bottom: 1rem;
         font-size: 1.25rem; }
         .component-workOrders .control-panel .controls .controls-link:hover {
           cursor: pointer; }
+    .component-workOrders .control-panel .work-order-filter {
+      height: 50%;
+      border: 1px solid green;
+      padding: 1rem; }
+      .component-workOrders .control-panel .work-order-filter .filter-header {
+        text-align: center;
+        font-size: 2rem;
+        margin-bottom: 1rem; }
+      .component-workOrders .control-panel .work-order-filter .filter-container {
+        display: flex;
+        width: 100%; }
+        .component-workOrders .control-panel .work-order-filter .filter-container button {
+          border-radius: 3px;
+          border: none; }
+          .component-workOrders .control-panel .work-order-filter .filter-container button:hover {
+            cursor: pointer; }
+        .component-workOrders .control-panel .work-order-filter .filter-container .filter-add {
+          width: 30%; }
+          .component-workOrders .control-panel .work-order-filter .filter-container .filter-add .filter-add-button {
+            width: 100%;
+            padding: 0.5rem 0;
+            height: 100%; }
+            .component-workOrders .control-panel .work-order-filter .filter-container .filter-add .filter-add-button:hover {
+              cursor: pointer; }
+        .component-workOrders .control-panel .work-order-filter .filter-container .filter-main {
+          width: 70%;
+          display: flex; }
+          .component-workOrders .control-panel .work-order-filter .filter-container .filter-main .filter-select {
+            width: 70%;
+            display: flex;
+            justify-content: space-around; }
+            .component-workOrders .control-panel .work-order-filter .filter-container .filter-main .filter-select .filter-type,
+            .component-workOrders .control-panel .work-order-filter .filter-container .filter-main .filter-select .filter-order {
+              padding: 0.5rem 0;
+              width: 45%;
+              border-radius: 3px; }
+              .component-workOrders .control-panel .work-order-filter .filter-container .filter-main .filter-select .filter-type:hover,
+              .component-workOrders .control-panel .work-order-filter .filter-container .filter-main .filter-select .filter-order:hover {
+                cursor: pointer; }
+          .component-workOrders .control-panel .work-order-filter .filter-container .filter-main .filter-controls {
+            width: 30%;
+            display: flex;
+            justify-content: space-around; }
+            .component-workOrders .control-panel .work-order-filter .filter-container .filter-main .filter-controls .filter-control-button {
+              padding: 0.5rem 0;
+              width: 45%; }
+              .component-workOrders .control-panel .work-order-filter .filter-container .filter-main .filter-controls .filter-control-button i {
+                width: 1rem; }
   .component-workOrders .component-views {
     border-left: 3px solid #0c101d;
     width: 75%;
@@ -1020,7 +1073,7 @@ template {
               width: 85%;
               border: none;
               background-color: transparent;
-              border-bottom: 1px solid #232528;
+              border-bottom: 1px solid #09121f;
               color: #aaacac;
               padding: 3px 0; }
             .component-workOrders .component-views .create-work-order .company-section .company-info .input-container .input-group input:focus {
@@ -1507,6 +1560,9 @@ template {
       display: flex;
       justify-content: space-between;
       align-items: center; }
+
+button:focus {
+  outline: 0; }
 
 .btn {
   width: 6rem;
