--- a/src/styles/components/_WorkOrders.scss
+++ b/src/styles/components/_WorkOrders.scss
@@ -48,7 +48,7 @@
     }
     .work-order-filter {
       height: 50%;
-      border: 1px solid green;
+      border-top: 3px solid $border-dark;
       padding: 1rem;
       .filter-header {
         text-align: center;
@@ -56,7 +56,7 @@
         margin-bottom: 1rem;
       }
       .filter-container {
-        display: flex;
+        // display: flex;
         width: 100%;
         button {
           border-radius: 3px;
@@ -66,7 +66,8 @@
           }
         }
         .filter-add {
-          width: 30%;
+          width: 50%;
+          margin: 0 auto;
           // height: 100%;
           .filter-add-button {
             width: 100%;
@@ -79,26 +80,31 @@
           }
         }
         .filter-main {
-          width: 70%;
-
+          width: 100%;
           display: flex;
+          margin-top: 1rem;
           .filter-select {
-            width: 70%;
-
+            width: 80%;
             display: flex;
             justify-content: space-around;
             .filter-type,
             .filter-order {
               padding: 0.5rem 0;
-              width: 45%;
+
               border-radius: 3px;
               &:hover {
                 cursor: pointer;
               }
             }
+            .filter-type {
+              width: 30%;
+            }
+            .filter-order {
+              width: 65%;
+            }
           }
           .filter-controls {
-            width: 30%;
+            width: 20%;
             display: flex;
             justify-content: space-around;
 
@@ -107,6 +113,46 @@
               width: 45%;
               i {
                 width: 1rem;
+              }
+            }
+          }
+        }
+        .filter-list {
+          margin-top: 1rem;
+          .filter-type,
+          .filter-order {
+            width: 30%;
+          }
+          .filter-actions {
+            width: 15%;
+          }
+          .filter-order {
+            margin: 0 10%;
+          }
+          .filter-list-headers,
+          .filter-item {
+            display: flex;
+            text-align: center;
+          }
+          .filter-list-headers {
+            border-bottom: 2px solid #22668a;
+            padding-bottom: 0.5rem;
+            margin-bottom: 0.75rem;
+            h4 {
+              font-size: 1.25rem;
+            }
+          }
+          .filter-item {
+            background-color: $blue-green;
+            padding: 0.5rem;
+            border-radius: 3px;
+            margin-bottom: 1rem;
+            h5 {
+              font-size: 1.1rem;
+            }
+            .filter-actions {
+              .filter-remove {
+                background: none;
               }
             }
           }
