work order queue can be filtered in ascending or descending order

--- a/src/styles/components/_WorkOrders.scss
+++ b/src/styles/components/_WorkOrders.scss
@@ -125,6 +125,14 @@
           }
           .filter-actions {
             width: 15%;
+            display: flex;
+            justify-content: space-around;
+            button {
+              background: none;
+              color: $light;
+              position: relative;
+              left: 10%;
+            }
           }
           .filter-order {
             margin: 0 10%;
