--- a/src/styles/components/_WorkOrders.scss
+++ b/src/styles/components/_WorkOrders.scss
@@ -237,6 +237,14 @@
                 font-size: 1.15rem;
               }
             }
+            .work-order-alert {
+              display: flex;
+              justify-content: center;
+              color: $primary-red;
+            }
+            .hidden {
+              display: none;
+            }
           }
           .property-selector {
             position: absolute;
