--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1307,12 +1307,12 @@ template {
           width: 90%;
           height: 100%;
           margin: 0 auto;
+          position: relative;
           padding: 5% 0;
           display: flex; }
           .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container {
             height: 100%;
-            width: 40%;
-            background-color: #395d7c; }
+            width: 40%; }
             .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .property-address {
               display: flex;
               align-items: center;
@@ -1325,19 +1325,9 @@ template {
               .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .property-img img {
                 height: 100%;
                 width: 100%; }
-            .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .edit-buttons {
-              display: flex;
-              justify-content: space-between;
-              align-items: center;
-              padding: 0 1rem;
-              width: 100%; }
-              .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .edit-buttons button {
-                width: 45%;
-                height: 60%;
-                padding: 8px 3px; }
           .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .work-order-info-container {
             width: 60%;
-            height: 100%;
+            height: 80%;
             border: 1px solid #4d5765;
             overflow-y: auto; }
             .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .work-order-info-container .form {
@@ -1358,6 +1348,22 @@ template {
                 border-radius: 3px;
                 height: 11rem;
                 padding: 1rem; }
+          .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .edit-buttons {
+            padding: 0 1rem;
+            width: 50%;
+            margin: 0 auto;
+            position: absolute;
+            top: 85%;
+            left: 50%;
+            transform: translate(-50%, -50%); }
+            .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .edit-buttons button {
+              width: 35%;
+              height: 60%;
+              padding: 8px 3px; }
+              .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .edit-buttons button:hover, .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .edit-buttons button:active {
+                cursor: pointer; }
+              .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .edit-buttons button:first-child {
+                margin-right: 2rem; }
 
 .component-transactions {
   height: 89vh;
