--- a/src/styles/components/_LandingPage.scss
+++ b/src/styles/components/_LandingPage.scss
@@ -78,7 +78,9 @@
       margin: 0 auto;
       .header-content {
         width: 50%;
-        border: 1px solid orange;
+        h1 {
+          font-size: 2.5rem;
+        }
         text-align: center;
       }
       .header-form {
